--- a/_modules/polyanalyst6api/project.html
+++ b/_modules/polyanalyst6api/project.html
@@ -40,6 +40,7 @@
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="kn">import</span> <span class="nn">datetime</span>
 <span class="kn">import</span> <span class="nn">functools</span>
+<span class="kn">import</span> <span class="nn">math</span>
 <span class="kn">import</span> <span class="nn">time</span>
 <span class="kn">import</span> <span class="nn">warnings</span>
 <span class="kn">from</span> <span class="nn">urllib.parse</span> <span class="kn">import</span> <span class="n">urlparse</span><span class="p">,</span> <span class="n">parse_qs</span>
@@ -229,20 +230,31 @@
 
         <span class="k">raise</span> <span class="n">APIException</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Node not found: name=&#39;</span><span class="si">{</span><span class="n">name_</span><span class="si">}</span><span class="s2">&#39;, type=&#39;</span><span class="si">{</span><span class="n">type_</span><span class="si">}</span><span class="s2">&#39;&quot;</span><span class="p">,</span> <span class="n">status_code</span><span class="o">=</span><span class="mi">500</span><span class="p">)</span>
 
-<div class="viewcode-block" id="Project.wait_for_completion"><a class="viewcode-back" href="../../index.html#polyanalyst6api.project.Project.wait_for_completion">[docs]</a>    <span class="k">def</span> <span class="nf">wait_for_completion</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">node</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">]])</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;Waits for the node to complete the execution. Returns True if node have</span>
-<span class="sd">        completed successfully and False otherwise.</span>
+<div class="viewcode-block" id="Project.wait_for_completion"><a class="viewcode-back" href="../../index.html#polyanalyst6api.project.Project.wait_for_completion">[docs]</a>    <span class="k">def</span> <span class="nf">wait_for_completion</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">node</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">]],</span> <span class="n">wave_id</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Waits for the node in a sequence of nodes to complete. Returns `True` if</span>
+<span class="sd">        node have completed successfully and `False` otherwise.</span>
+
+<span class="sd">        Unlike `execute(..., wait=True)`, which returns only after an entire node</span>
+<span class="sd">        sequence has completed, this method returns immediately after the specified</span>
+<span class="sd">        node has completed.</span>
+
+<span class="sd">        :param node: Node name or dict with name and type of node that runs within execution wave</span>
+<span class="sd">        :param wave_id: Execution wave identifier</span>
 
 <span class="sd">        .. deprecated:: 0.17.0</span>
 <span class="sd">           Use :meth:`Project.is_running` instead.</span>
 
-<span class="sd">        :param node: node name or dict with name and type of node</span>
+<span class="sd">        .. versionchanged:: 0.23.0</span>
+<span class="sd">           Introduced this deprecated method back. Added `wave_id` argument.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">warnings</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span>
-            <span class="s1">&#39;Project.wait_for_completion() is deprecated, use Project.is_running() instead.&#39;</span><span class="p">,</span>
-            <span class="ne">DeprecationWarning</span><span class="p">,</span>
-            <span class="n">stacklevel</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span>
-        <span class="p">)</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">wave_id</span><span class="p">:</span>
+            <span class="n">warnings</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span>
+                <span class="s1">&#39;It is recommended to use `Project.wait_for_completion` with `wave_id` argument&#39;</span><span class="p">,</span>
+                <span class="ne">UserWarning</span><span class="p">,</span>
+                <span class="n">stacklevel</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span>
+            <span class="p">)</span>
+
         <span class="n">time</span><span class="o">.</span><span class="n">sleep</span><span class="p">(</span><span class="mf">0.5</span><span class="p">)</span>  <span class="c1"># give pa time to update node statuses</span>
         <span class="k">while</span> <span class="kc">True</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_update_node_list</span><span class="p">()</span>
@@ -250,9 +262,11 @@
 
             <span class="k">if</span> <span class="n">stats</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;errMsg&#39;</span><span class="p">):</span>
                 <span class="k">return</span> <span class="kc">False</span>
-            <span class="k">if</span> <span class="n">stats</span><span class="p">[</span><span class="s1">&#39;status&#39;</span><span class="p">]</span> <span class="o">==</span> <span class="s1">&#39;synchronized&#39;</span><span class="p">:</span>
+            <span class="k">elif</span> <span class="n">stats</span><span class="p">[</span><span class="s1">&#39;status&#39;</span><span class="p">]</span> <span class="o">==</span> <span class="s1">&#39;synchronized&#39;</span><span class="p">:</span>
                 <span class="k">return</span> <span class="kc">True</span>
-            <span class="k">if</span> <span class="n">stats</span><span class="p">[</span><span class="s1">&#39;status&#39;</span><span class="p">]</span> <span class="o">==</span> <span class="s1">&#39;incomplete&#39;</span><span class="p">:</span>
+            <span class="k">elif</span> <span class="n">stats</span><span class="p">[</span><span class="s1">&#39;status&#39;</span><span class="p">]</span> <span class="o">==</span> <span class="s1">&#39;incomplete&#39;</span><span class="p">:</span>
+                <span class="k">return</span> <span class="kc">False</span>
+            <span class="k">elif</span> <span class="n">wave_id</span> <span class="ow">and</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">is_running</span><span class="p">(</span><span class="n">wave_id</span><span class="p">):</span>
                 <span class="k">return</span> <span class="kc">False</span>
 
             <span class="n">time</span><span class="o">.</span><span class="n">sleep</span><span class="p">(</span><span class="mi">1</span><span class="p">)</span></div>
@@ -321,9 +335,6 @@
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Set parameters of the selected Parameters node in the project.</span>
 
-<span class="sd">        .. deprecated:: 0.18.0</span>
-<span class="sd">           Use :meth:`Parameters.set` instead.</span>
-
 <span class="sd">        :param node: name of Parameters node</span>
 <span class="sd">        :param node_type: node type, which parameters need to be set. The types \</span>
 <span class="sd">            are listed in NodeTypes.</span>
@@ -331,13 +342,16 @@
 <span class="sd">        :param declare_unsync: reset the status of the Parameters node.</span>
 <span class="sd">        :param hard_update: update every child node with new parameters if True, \</span>
 <span class="sd">            otherwise reset their statuses. Works only if declare_unsync is True.</span>
+
+<span class="sd">        .. deprecated:: 0.18.0</span>
+<span class="sd">           Use :meth:`Parameters.set` instead.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">warnings</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span>
             <span class="s1">&#39;Project.set_parameters() is deprecated, use Project.parameters.set() instead.&#39;</span><span class="p">,</span>
             <span class="ne">DeprecationWarning</span><span class="p">,</span>
             <span class="n">stacklevel</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span>
         <span class="p">)</span>
-        <span class="n">warns</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">parameters</span><span class="p">(</span><span class="n">node</span><span class="p">)</span><span class="o">.</span><span class="n">set</span><span class="p">(</span><span class="n">node_type</span><span class="p">,</span> <span class="n">parameters</span><span class="p">,</span> <span class="n">declare_unsync</span><span class="p">,</span> <span class="n">hard_update</span><span class="p">)</span>
+        <span class="n">warns</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">parameters</span><span class="p">(</span><span class="n">node</span><span class="p">)</span><span class="o">.</span><span class="n">set</span><span class="p">(</span><span class="n">node_type</span><span class="p">,</span> <span class="n">parameters</span><span class="p">,</span> <span class="kc">None</span><span class="p">,</span> <span class="n">declare_unsync</span><span class="p">,</span> <span class="n">hard_update</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">warns</span><span class="p">:</span>
             <span class="k">for</span> <span class="n">msg</span> <span class="ow">in</span> <span class="n">warns</span><span class="p">:</span>
                 <span class="n">warnings</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span><span class="n">msg</span><span class="p">)</span></div></div>
@@ -519,10 +533,18 @@
                 <span class="n">result</span> <span class="o">=</span> <span class="p">{}</span>
                 <span class="k">for</span> <span class="n">column</span> <span class="ow">in</span> <span class="n">info</span><span class="p">[</span><span class="s1">&#39;columnsInfo&#39;</span><span class="p">]:</span>
                     <span class="k">if</span> <span class="n">column</span><span class="p">[</span><span class="s1">&#39;flags&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;getTextAlways&#39;</span><span class="p">):</span>
-                        <span class="n">result</span><span class="p">[</span><span class="n">column</span><span class="p">[</span><span class="s1">&#39;title&#39;</span><span class="p">]]</span> <span class="o">=</span> <span class="n">get_text</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">idx</span><span class="p">,</span> <span class="n">column</span><span class="p">[</span><span class="s1">&#39;id&#39;</span><span class="p">],</span> <span class="n">column</span><span class="p">[</span><span class="s1">&#39;title&#39;</span><span class="p">])</span>
+                        <span class="n">result</span><span class="p">[</span><span class="n">column</span><span class="p">[</span><span class="s1">&#39;title&#39;</span><span class="p">]]</span> <span class="o">=</span> <span class="n">get_text</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">idx</span><span class="p">,</span> <span class="n">column</span><span class="p">[</span><span class="s1">&#39;id&#39;</span><span class="p">])</span>
                     <span class="c1"># elif column[&#39;type&#39;] == &#39;DateTime&#39;:  # todo convert to python datetime?</span>
                     <span class="k">else</span><span class="p">:</span>
-                        <span class="n">result</span><span class="p">[</span><span class="n">column</span><span class="p">[</span><span class="s1">&#39;title&#39;</span><span class="p">]]</span> <span class="o">=</span> <span class="n">rows</span><span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">idx</span><span class="p">][</span><span class="n">column</span><span class="p">[</span><span class="s1">&#39;id&#39;</span><span class="p">]]</span>
+                        <span class="n">_value</span> <span class="o">=</span> <span class="n">rows</span><span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">idx</span><span class="p">][</span><span class="n">column</span><span class="p">[</span><span class="s1">&#39;id&#39;</span><span class="p">]]</span>
+                        <span class="k">if</span> <span class="n">_value</span> <span class="o">==</span> <span class="mf">1e+100</span><span class="p">:</span>
+                            <span class="n">_value</span> <span class="o">=</span> <span class="kc">None</span>
+                        <span class="k">elif</span> <span class="n">_value</span> <span class="o">==</span> <span class="mf">8e+100</span><span class="p">:</span>
+                            <span class="n">_value</span> <span class="o">=</span> <span class="n">math</span><span class="o">.</span><span class="n">inf</span>
+                        <span class="k">elif</span> <span class="n">_value</span> <span class="o">==</span> <span class="o">-</span><span class="mf">8e+100</span><span class="p">:</span>
+                            <span class="n">_value</span> <span class="o">=</span> <span class="o">-</span><span class="n">math</span><span class="o">.</span><span class="n">inf</span>
+
+                        <span class="n">result</span><span class="p">[</span><span class="n">column</span><span class="p">[</span><span class="s1">&#39;title&#39;</span><span class="p">]]</span> <span class="o">=</span> <span class="n">_value</span>
 
                 <span class="bp">self</span><span class="o">.</span><span class="n">idx</span> <span class="o">+=</span> <span class="mi">1</span>
                 <span class="k">return</span> <span class="n">result</span>
@@ -543,17 +565,13 @@
         <span class="p">)</span>
 
     <span class="nd">@retry_on_invalid_guid</span>
-    <span class="k">def</span> <span class="nf">_cell_text</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">row</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">col</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">_title</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
+    <span class="k">def</span> <span class="nf">_cell_text</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">row</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">col</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_api</span><span class="o">.</span><span class="n">get</span><span class="p">(</span>
             <span class="s1">&#39;dataset/cell-text&#39;</span><span class="p">,</span>
             <span class="n">json</span><span class="o">=</span><span class="p">{</span>
                 <span class="s1">&#39;wrapperGuid&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">guid</span><span class="p">,</span>
                 <span class="s1">&#39;row&#39;</span><span class="p">:</span> <span class="n">row</span><span class="p">,</span>
                 <span class="s1">&#39;col&#39;</span><span class="p">:</span> <span class="n">col</span><span class="p">,</span>
-                <span class="c1"># todo remove next keys</span>
-                <span class="s1">&#39;colTitle&#39;</span><span class="p">:</span> <span class="n">_title</span><span class="p">,</span>
-                <span class="s1">&#39;offset&#39;</span><span class="p">:</span> <span class="mi">0</span><span class="p">,</span>
-                <span class="s1">&#39;count&#39;</span><span class="p">:</span> <span class="mi">0</span><span class="p">,</span>
             <span class="p">},</span>
         <span class="p">)[</span><span class="s1">&#39;text&#39;</span><span class="p">]</span></div>
 </pre></div>
