--- a/_modules/polyanalyst6api/project.html
+++ b/_modules/polyanalyst6api/project.html
@@ -131,6 +131,10 @@
 <span class="sd">          ...     &#39;Federated Search&#39;,</span>
 <span class="sd">          ...     prj.get_node_list()[1],</span>
 <span class="sd">          ... )</span>
+
+<span class="sd">        or, if you want to execute all nodes, call this method with no ``args``:</span>
+
+<span class="sd">          &gt;&gt;&gt; prj.execute()</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">nodes</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="k">for</span> <span class="n">arg</span> <span class="ow">in</span> <span class="n">args</span><span class="p">:</span>
