--- a/genindex.html
+++ b/genindex.html
@@ -133,6 +133,8 @@
 </li>
       <li><a href="index.html#polyanalyst6api.project.DataSet.get_progress">get_progress() (polyanalyst6api.project.DataSet method)</a>
 </li>
+      <li><a href="index.html#polyanalyst6api.api.API.get_project_import_status">get_project_import_status() (polyanalyst6api.api.API method)</a>
+</li>
       <li><a href="index.html#polyanalyst6api.api.API.get_server_info">get_server_info() (polyanalyst6api.api.API method)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.project.Project.get_tasks">get_tasks() (polyanalyst6api.project.Project method)</a>
@@ -145,10 +147,12 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.project.Project.is_running">is_running() (polyanalyst6api.project.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.api.API.import_project">import_project() (polyanalyst6api.api.API method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.project.Project.is_running">is_running() (polyanalyst6api.project.Project method)</a>
+</li>
       <li><a href="index.html#polyanalyst6api.project.DataSet.iter_rows">iter_rows() (polyanalyst6api.project.DataSet method)</a>
 </li>
   </ul></td>
@@ -253,7 +257,7 @@
       &copy;2018, yatmanov.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.8.5</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.8.6</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.12</a>
       
     </div>
